# babi-grammars

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
licenses/: LICENSE_Dart-Code_Dart-Code  LICENSE_MagicStack_MagicPython  LICENSE_PowerShell_EditorSyntax  LICENSE_TingPing_language-meson  LICENSE_Varriount_NimLime  LICENSE_WhereIsX_vscode-crystal-lang  LICENSE_Xoronic_pest-Syntax-Highlighting-for-vscode  LICENSE_alefragnani_vscode-language-pascal  LICENSE_asottile_MagicPython  LICENSE_asottile_atom-language-rust  LICENSE_asottile_better-cpp-syntax  LICENSE_asottile_cpp-textmate-grammar  LICENSE_asottile_language-shellscript  LICENSE_asottile_language-xml  LICENSE_asottile_make.tmbundle  LICENSE_asottile_pest-Syntax-Highlighting-for-vscode  LICENSE_asottile_vscode-mssql  LICENSE_asottile_vscode-nim  LICENSE_asottile_vscode-rst  LICENSE_asottile_vscode-terraform  LICENSE_asottile_yaml.tmbundle  LICENSE_atom_language-css  LICENSE_atom_language-php  LICENSE_atom_language-sass  LICENSE_atom_language-shellscript  LICENSE_crystal-lang-tools_vscode-crystal-lang  LICENSE_dotnet_csharp-tmLanguage  LICENSE_elixir-editors_elixir-tmbundle  LICENSE_fadeevab_make.tmbundle  LICENSE_fixterjake_vscode-kotlin  LICENSE_gleam-lang_vscode-gleam  LICENSE_grafana_vscode-jsonnet  LICENSE_hashicorp_syntax  LICENSE_hashicorp_vscode-terraform  LICENSE_ionide_ionide-fsgrammar  LICENSE_janet-lang_vscode-janet  LICENSE_jaseci-labs_jac-vscode  LICENSE_jaseci-labs_jaseci  LICENSE_jeff-hykin_better-c-syntax  LICENSE_jeff-hykin_better-cpp-syntax  (+33 more)
share/babi/grammar_v1/: scope.terraform.json  source.arm.json  source.asm.json  source.batchfile.json  source.bazel.json  source.bazelrc.json  source.c.json  source.cpp.embedded.macro.json  source.cpp.json  source.crystal.json  source.cs.json  source.css.json  source.css.scss.json  source.dart.json  source.diff.json  source.dockerfile.json  source.elixir.json  source.fsharp.json  source.gleam.json  source.go.json  source.haskell.json  source.hcl.json  source.hcl.terraform.json  source.ini.json  source.jac.json  source.janet.json  source.java.json  source.js.json  source.js.jsx.json  source.json.json  source.jsonnet.json  source.kotlin.json  source.lua.json  source.makefile.json  source.meson.json  source.nim.comment.json  source.nim.json  source.nim_filter.json  source.nimble.json  source.nimcfg.json  (+44 more)
testdata/: .bazelrc  Dockerfile  git-rebase-todo  meson.build  scope_terraform.tf  source.bazel.bzl  source.fsharp.fs  source.make.makefile  source.starlark.sky  source_batch.bat  source_c.c  source_coffee.coffee  source_cpp.cpp  source_crystal.cr  source_csharp.cs  source_css.css  source_diff  source_elixier.ex  source_gleam.gleam  source_haskell.hs  source_ini.ini  source_jac.jac  source_janet.janet  source_java.java  source_js.js  source_json.json  source_lua.lua  source_objcpp.mm  source_pascal.pas  source_perl6.pl6  source_pestfile.pest  source_powershell.ps1  source_python.py  source_r.r  source_ruby.rb  source_sass.sass  source_scala.scala  source_scss.scss  source_shell.sh  source_swift.swift  (+12 more)
