[metadata]
name = babi_grammars
version = 0.0.2
description = grammars for babi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/babi-grammars
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
license_files =
    licenses/LICENSE_MagicStack_MagicPython
    licenses/LICENSE_PowerShell_EditorSyntax
    licenses/LICENSE_asottile_atom-language-rust
    licenses/LICENSE_asottile_language-xml
    licenses/LICENSE_atom_language-css
    licenses/LICENSE_atom_language-sass
    licenses/LICENSE_atom_language-shellscript
    licenses/LICENSE_fadeevab_make.tmbundle
    licenses/LICENSE_jeff-hykin_better-go-syntax
    licenses/LICENSE_jeff-hykin_cpp-textmate-grammar
    licenses/LICENSE_lingua-pupuli_puppet-editor-syntax
    licenses/LICENSE_microsoft_TypeScript-TmLanguage
    licenses/LICENSE_microsoft_vscode-JSON.tmLanguage
    licenses/LICENSE_microsoft_vscode-markdown-tm-grammar
    licenses/LICENSE_moby_moby
    licenses/LICENSE_textmate_diff.tmbundle
    licenses/LICENSE_textmate_git.tmbundle
    licenses/LICENSE_textmate_html.tmbundle
    licenses/LICENSE_textmate_ini.tmbundle
    licenses/LICENSE_textmate_yaml.tmbundle
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6.1

[options.data_files]
share/babi/grammar_v1 =
    share/babi/grammar_v1/source.c.json
    share/babi/grammar_v1/source.cpp.embedded.macro.json
    share/babi/grammar_v1/source.cpp.json
    share/babi/grammar_v1/source.css.json
    share/babi/grammar_v1/source.css.scss.json
    share/babi/grammar_v1/source.diff.json
    share/babi/grammar_v1/source.dockerfile.json
    share/babi/grammar_v1/source.go.json
    share/babi/grammar_v1/source.ini.json
    share/babi/grammar_v1/source.json.json
    share/babi/grammar_v1/source.makefile.json
    share/babi/grammar_v1/source.objc.json
    share/babi/grammar_v1/source.objcpp.json
    share/babi/grammar_v1/source.powershell.json
    share/babi/grammar_v1/source.puppet.json
    share/babi/grammar_v1/source.python.json
    share/babi/grammar_v1/source.regexp.python.json
    share/babi/grammar_v1/source.rust.json
    share/babi/grammar_v1/source.sass.json
    share/babi/grammar_v1/source.sassdoc.json
    share/babi/grammar_v1/source.shell.json
    share/babi/grammar_v1/source.ts.json
    share/babi/grammar_v1/source.tsx.json
    share/babi/grammar_v1/source.yaml.json
    share/babi/grammar_v1/text.git-commit.json
    share/babi/grammar_v1/text.git-rebase.json
    share/babi/grammar_v1/text.html.basic.json
    share/babi/grammar_v1/text.html.derivative.json
    share/babi/grammar_v1/text.html.markdown.json
    share/babi/grammar_v1/text.shell-session.json
    share/babi/grammar_v1/text.xml.json
    share/babi/grammar_v1/text.xml.xsl.json

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
